# docs/swagger.json
@@ -10,6 +10,46 @@
     "basePath": "/",
     "paths": {
         "/users": {
+            "get": {
+                "description": "Returns a paged list of users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get paged users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/contracts.PagedResponse-contracts_UserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "internal error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Creates a new user",
                 "consumes": [
@@ -106,6 +146,34 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "contracts.PagedResponse-contracts_UserResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/contracts.UserResponse"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/contracts.Pagination"
+                }
+            }
+        },
+        "contracts.Pagination": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
