# routes/contracts/paged_response.go
@@ -1,0 +1,12 @@
+package contracts
+
+type PagedResponse[T any] struct {
+	Items      []T        `json:"items"`
+	Pagination Pagination `json:"pagination"`
+}
+
+type Pagination struct {
+	Page  int `json:"page"`
+	Size  int `json:"size"`
+	Total int `json:"total"`
+}
